--- a/Entourage/Base.lproj/Main.storyboard
+++ b/Entourage/Base.lproj/Main.storyboard
@@ -1,17 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GQE-Jc-e3G">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="xZp-ot-fRi">
+            <objects>
+                <viewController id="GQE-Jc-e3G" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uib-un-4xM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U6O-5W-UQ7">
+                                <rect key="frame" x="107" y="353" width="200" height="200"/>
+                                <color key="backgroundColor" red="0.94117647058823528" green="0.39215686274509803" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="Dn0-wx-wqJ"/>
+                                    <constraint firstAttribute="width" secondItem="U6O-5W-UQ7" secondAttribute="height" id="XQg-WB-N5U"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wk3-Bl-pJf">
+                                <rect key="frame" x="157" y="403" width="100" height="100"/>
+                                <color key="backgroundColor" red="0.94117647058823528" green="0.39215686274509803" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="85T-aU-khp"/>
+                                    <constraint firstAttribute="width" secondItem="Wk3-Bl-pJf" secondAttribute="height" id="iFJ-X1-RfV"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Wk3-Bl-pJf" firstAttribute="centerX" secondItem="WWS-7z-PXq" secondAttribute="centerX" id="M9L-L3-a22"/>
+                            <constraint firstItem="Wk3-Bl-pJf" firstAttribute="width" secondItem="Wk3-Bl-pJf" secondAttribute="height" id="MSz-37-eYM"/>
+                            <constraint firstItem="Wk3-Bl-pJf" firstAttribute="centerY" secondItem="WWS-7z-PXq" secondAttribute="centerY" id="jpb-Ht-uM5"/>
+                            <constraint firstItem="U6O-5W-UQ7" firstAttribute="centerX" secondItem="WWS-7z-PXq" secondAttribute="centerX" id="lQ5-MX-TcQ"/>
+                            <constraint firstItem="U6O-5W-UQ7" firstAttribute="centerY" secondItem="WWS-7z-PXq" secondAttribute="centerY" id="yxT-2F-Z0Q"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="WWS-7z-PXq"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1to-fo-vi8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-863.768115942029" y="47.544642857142854"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Entourage" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
